--- a/public/index.html
+++ b/public/index.html
@@ -1,53 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-      crossorigin="anonymous"
-    />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <nav class="navbar bg-dark">
-      <h1>
-        <a href="dashboard.html">
-          <i class="fas fa-code"></i>
-        </a>
-      </h1>
-      <ul>
-        <li>
-          <a href="profile.html">Profile</a>
-        </li>
-        <li>
-          <a href="register.html">Register</a>
-        </li>
-        <li>
-          <a href="login.html">Login</a>
-        </li>
-      </ul>
-    </nav>
-    <section class="landing">
-      <div class="dark-overlay">
-        <div class="landing-inner">
-          <h1 class="x-large">sdfkgjhfdj</h1>
-          <h1 class="lead">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus
-            exercitationem deleniti rerum, dolorum alias voluptatibus.
-            Consectetur ab incidunt ex quidem.
-          </h1>
-          <div class="buttons">
-            <a href=".html" class="btn btn-primary">Sign In</a>
-            <a href="register.html" class="btn btn-light">Register</a>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+  <title>Document</title>
+</head>
+
+<body>
+  <nav class="navbar bg-dark">
+    <h1>
+      <a href="index.html">
+        <i class="fas fa-code"></i>
+      </a>
+    </h1>
+    <ul>
+      <li>
+        <a href="profile.html">Profile</a>
+      </li>
+      <li>
+        <a href="register.html">Register</a>
+      </li>
+      <li>
+        <a href="login.html">Login</a>
+      </li>
+    </ul>
+  </nav>
+  <section class="landing">
+    <div class="dark-overlay">
+      <div class="landing-inner">
+        <h1 class="x-large">sdfkgjhfdj</h1>
+        <h1 class="lead">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus
+          exercitationem deleniti rerum, dolorum alias voluptatibus.
+          Consectetur ab incidunt ex quidem.
+        </h1>
+        <div class="buttons">
+          <a href=".html" class="btn btn-primary">Sign In</a>
+          <a href="register.html" class="btn btn-light">Register</a>
         </div>
       </div>
-    </section>
-  </body>
+    </div>
+  </section>
+</body>
+
 </html>
