--- a/public/login.html
+++ b/public/login.html
@@ -32,35 +32,28 @@
     </nav>
     <section class="container">
         <h1 class="large text-primary">
-            Sign Up
+            Log In
         </h1>
         <p class="lead">
             <i class="fas fa-user"></i>
-            Create Your Account
+            Login to you account
         </p>
         <form action="ashboard.html">
-            <div class="form-group">
-                <input type="text" placeholder="name">
-            </div>
+
             <div class="form-group">
                 <input type="email" placeholder="email">
-                <small class="form-text">Thi Site Uses Gravatar </small>
             </div>
-            <div class="form-group">
-                <input type="address" placeholder="address">
-            </div>
+
             <div class="form-group">
                 <input type="password" placeholder="password">
             </div>
-            <div class="form-group">
-                <input type="password" placeholder="confirm password">
-            </div>
+
             <div class="form-group">
                 <input type="submit" class="btn btn-primary" value="submit">
             </div>
         </form>
         <p class="my-1">
-            Already Have an account <a href="login.html">Sign in </a>
+            Dont you have an account ? <a href="Register.html">Sign up </a>
         </p>
 
     </section>
